# manager/api/render.go
@@ -51,3 +51,7 @@ func (r Location) Bind(req *http.Request) error {
 func (t Location) Render(w http.ResponseWriter, r *http.Request) error {
 	return nil
 }
+
+func (t Transaction) Render(w http.ResponseWriter, r *http.Request) error {
+	return nil
+}
